# Fetch

./: creation_result.json  dir_create.ipynb  project_structure.yaml  pyproject.toml  test.ipynb
src/model/src/model/: multi_task_model.py  sentence_encoder.py
tests/tests/: test_embeddings.py
